tests/ui/borrowck/issue-42344.stderr
error[E0596]: cannot borrow `*TAB[_]` as mutable, as `TAB` is an immutable static item
  --> $DIR/issue-42344.rs:4:5
   |
LL |     TAB[0].iter_mut();
   |     ^^^^^^ cannot borrow as mutable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
